# tandem-vpn

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: hosts.rs  lib.rs  sys.rs
core/src/zapret/: mod.rs  strategy.rs
