[package]
name = "tandem-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "tandem-vpn desktop GUI (Tauri)."
default-run = "tandem-app"

[lib]
name = "tandem_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "tandem-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tandem-core = { path = "../../core" }
ureq = { version = "2", features = ["tls"] }
zip-extract = "0.1"

[features]
# Used by `tauri dev`/`tauri build` integrations.
custom-protocol = ["tauri/custom-protocol"]
